Fixed Overflow on mobile devices

--- a/style.css
+++ b/style.css
@@ -73,7 +73,6 @@ button {
 @media only screen and (max-width: 600px) {
   * {
     height: fit-content;
-    overflow: hidden;
     margin: 0;
     padding: 0;
     font-family: "Guaruja Neue", sans-serif;
